# ghp-vocab

./: Makefile  Pipfile  package.json  setup.cfg  setup.py
docs/: 404.html  index.html  search.html
docs/DGCInfectionInformation/: index.html
docs/DGCPatient/: index.html
docs/DGCTestInformation/: index.html
docs/DGCVaccinationInformation/: index.html
docs/DGCVaccine/: index.html
docs/GHPProofOfCovidTest/: index.html
docs/GHPProofOfRecovery/: index.html
docs/GHPProofOfVaccination/: index.html
docs/String/: index.html
docs/credits/: index.html
docs/dGCInfectionInformation__countryOfTest/: index.html
docs/dGCInfectionInformation__dateFirstPositive/: index.html
docs/dGCInfectionInformation__diseaseRecoveredFrom/: index.html
docs/dGCPatient__first_name/: index.html
docs/dGCPatient__gender/: index.html
docs/dGCPatient__id/: index.html
docs/dGCPatient__last_name/: index.html
docs/dGCTestInformation__countryOfTestAdminstration/: index.html
docs/dGCTestInformation__healthProfessionalAdministered/: index.html
docs/dGCTestInformation__sampleCollectionDateTime/: index.html
docs/dGCTestInformation__sampleOriginType/: index.html
docs/dGCTestInformation__testCenter/: index.html
docs/dGCTestInformation__testDetails/: index.html
docs/dGCTestInformation__testName/: index.html
docs/dGCTestInformation__testResult/: index.html
docs/dGCTestInformation__testType/: index.html
docs/dGCTestInformation__testValidatorId/: index.html
docs/dGCVaccinationInformation__administeringCentre/: index.html
ghp_vocab/: ghp-base.py
model/: CONFIG.yaml
(+28 files in other folders)
