[metadata]
name = ghp_vocab
url = https://github.com/goodhealthpass.org/ghp-vocab
author = Mukundan Parthasarathy
author_email = mukundanps@gmail.com
summary = Vaccination, Proof of (Lab) negative test, Proof of Recovery cert vocab
description = Vaccination, Proof of (Lab) negative test, Proof of Recovery cert vocab
long_description = Vaccination, Proof of (Lab) negative test, Proof of Recovery cert vocab
home_page = https://goodhealthpass.org.github.io/ghp_vocab
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model

[options]
include_package_data = True

[files]
packages =
    ghp_vocab

data-files = ghp_vocab/model = ghp_vocab/model/*
    ghp_vocab/jsonld_context = ghp_vocab/jsonld_context/*
    ghp_vocab/json_schema = ghp_vocab/json_schema/*
    ghp_vocab/model = ghp_vocab/model/*


